<resources>
    <string name="app_name">TP2</string>
    <string name="accueil">Accueil</string>
    <string name="groupe">Groupe</string>
    <string name="localisation">Localisation</string>
    <string name="parametres">Paramètre</string>
    <string name="profil">Mon Profil</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo">LOGO</string>
    <string name="sign_in_register">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings related to Register -->
    <string name="group_name">Nom du groupe</string>
    <string name="action_register">Register</string>


    <!--partie test !-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>

    <string name="title_activity_login_display">LoginDisplayActivity</string>
    <string name="hint_mail">"Ici : L'adresse email de l'utilisateur"</string>
    <string name="hint_pass">"Ici : Le mot de passe de l'utilisateur"</string>

    <!--Partie Camera!-->

    <string name="action_settings">Settings</string>

    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="name">User Name</string>
    <string name="dob">User DOB</string>
    <string name="salary">User Salary</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>


    <!--firebase string-->
    <string name="myFireBaseUrl">https://shining-heat-3886.firebaseio.com/</string>
    <string name="goto_map">goto map</string>
    <string name="test_user">Test User</string>
    <string name="title_activity_maps">Map</string>

    <!--Menus-->
    <string name="action_user_profile">Profil utilisateur</string>
    <string name="action_logout">Déconnecter</string>
    <string name="action_home_connecte">Menu principal</string>
</resources>
