<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:background="@drawable/index1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.alexmao.testtp2.test"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:text="Inscription"
            android:textSize="24sp"
            android:layout_weight="0.5"
            android:textColor="@color/black_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:text="@string/email"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/black_color" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/password"
            android:textColor="@color/black_color" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:textSize="@dimen/normal_text_size"
            android:text="Nom du Groupe"
            android:textColor="@color/black_color" />
        <EditText
            android:id="@+id/group_name"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:inputType="textAutoComplete" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:textSize="@dimen/normal_text_size"
            android:text="Nom"
            android:textColor="@color/black_color" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/normal_padding"
            android:textSize="@dimen/normal_text_size"
            android:text="Prenom"
            android:textColor="@color/black_color" />



        <EditText
            android:id="@+id/prenom"
            android:layout_width="@dimen/large_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text" />


        <Button
            android:id="@+id/inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/normal_padding"
            android:text="@string/create_account" />

    </LinearLayout>
</ScrollView>
